[metadata]
name = pyradex
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.4.2dev
author = Adam Ginsburg
author_email = adam.g.ginsburg@gmail.com
description = Python wrapper of RADEX
long_description = Python-wrapped version of RADEX
license = LICENSE.rst
url = https://github.com/keflavich/pyradex
edit_on_github = False
github_project = keflavich/pyradex
python_requires = ">=2.7"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = astropy
zip_safe = False
use_2to3 = False

[options.entry_points]
console_scripts =

[options.package_data]
* = *.c
packagename = data/*
packagename.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
